fix z-index of pictures in GalleryScrollFocus on mobile

--- a/components/content/GalleryScrollFocus.module.css
+++ b/components/content/GalleryScrollFocus.module.css
@@ -82,6 +82,7 @@
   max-width: 572px;
 
   overflow: hidden;
+  z-index: 1;
 }
 
 .image {
